# grpy-rest-client

./: .flake8  .gitignore  .idea  .pre-commit-config.yaml  CHANGELOG.md  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  test_requirements.txt
.github/workflows/: lint.yml  release.yml  test.yml  version.yml
examples/: example_usage.py  request.py  sample.py  session_reuse_example.py
scripts/: bootstrap_venv.py
src/grpy/: __init__.py  async_rest_client.py  base_rest_client.py  logging.py  pagination.py  pagination_manager.py  pagination_strategies.py  pagination_strategy_protocol.py  rest_client.py  rest_client_base.py  retry.py  retry_manager.py
tests/unit/: conftest.py  test_async_rest_client_exception.py  test_async_rest_client_request.py  test_hateoas_pagination.py  test_logging.py  test_pagination.py  test_pagination_manager.py  test_pagination_protocol.py  test_pagination_retry.py  test_pagination_strategies.py  test_rest_client.py  test_rest_client_attributes.py  test_rest_client_base.py  test_rest_client_context_manager_cleanup.py  test_rest_client_exception.py  test_rest_client_exceptions.py  test_rest_client_headers.py  test_rest_client_request.py  test_retry_manager.py
tools/: bootstrap_dev.py
