[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=0.22", "hatch-vcs>=0.2"]


[project]
name = "grpy_rest_client"
version = "0.1.0"

description = "A package for making HTTP requests."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
  # https://pypi.org/classifiers/
  "License :: OSI Approved :: MIT License",
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.8.0"
]

[project.urls]
Homepage = "https://github.com/brooksjbr/grpy-rest-client"
Documentation = "https://github.com/brooksjbr/grpy-rest-client/blob/main/README.md"
Repository = "https://github.com/brooksjbr/grpy-rest-client.git"
[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0"
]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.black]
line-length = 80
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
